[package]
name = "axon-lang"
version = "1.7.0"
authors = ["AXON Project", "Bemarking AI S.A.S."]
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Bemarking/axon-lang"
readme = "../README.md"
keywords = ["axon", "compiler", "runtime", "ai", "language"]
categories = ["compilers", "development-tools::ffi", "asynchronous"]
description = "AXON v1.5.1 — first crates.io publication of the AXON language full-stack runtime. Lexer/parser/type-checker/IR generator (re-exported from axon-frontend) plus the native Rust runtime: typed channels (TypedEventBus with QoS×5, π-calculus mobility, capability extrusion via shield D8 — Fase 13.f.2), Free Monad CPS handlers (Fase 2), lease kernel + reconcile loop (Fase 3+5), Epistemic Security Kernel (ESK Fase 6), Trust Types + ReplayLog (Fase 11.a+11.c), Stateful PEM over WebSocket (Fase 11.d), Ontological Tool Synthesis (Fase 11.e), Mobile Typed Channels (Fase 13). Crate publishes as `axon-lang` to mirror the Python PyPI package; library import remains `use axon::*` so existing call sites keep working unchanged."

[lib]
name = "axon"
path = "src/lib.rs"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
# §Fase 12.a — compiler frontend (lexer/parser/AST/type_checker/IR/checker +
# closed catalogs for Fase 11.a/11.c/11.e) lives in its own crate with
# zero runtime deps so tooling (axon-lsp, analyzers) can consume it
# without dragging tokio/axum/sqlx/aws. Path is used for in-tree builds;
# `version` makes the dep cargo-publishable (crates.io requires non-path
# deps to carry a version specifier).
axon-frontend = { path = "../axon-frontend", version = "=0.2.0" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
# §λ-L-E Fase 5 — cognitive immune system needs SHA-256 + HMAC for signed traces.
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
# §ESK Fase 6.6 — deterministic ZIP bundle for the audit evidence packager.
zip = { version = "2", default-features = false, features = ["deflate"] }
# §Fase 10.e — JWT signature verification + JWKS client for the Rust
# tenant extractor. Closes the pre-10.e gap where `tenant.rs` extracted
# `tenant_id` from the JWT payload without checking the signature.
jsonwebtoken = "9"
# §Fase 11.a — Temporal Algebraic Effects + Trust Types.
# Ed25519 is the fourth member of the CLOSED trust catalog (alongside
# HMAC-SHA256, JWT signature, OAuth2 PKCE S256 code exchange). Any
# addition to the catalog requires a compiler PR + security review;
# writing your own `verify_signature` is rejected at compile time.
ed25519-dalek = { version = "2", features = ["rand_core"] }
subtle = "2"
urlencoding = "2"
# §Fase 11.c — ReplayLog trait needs async for the enterprise-adapter
# shape (Postgres writes) even though the in-memory impl is sync.
async-trait = "0.1"
