[package]
name = "axon-emcp"
version = "0.51.0"
authors = ["AXON Project", "Bemarking AI S.A.S."]
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/Bemarking/axon-lang"
description = "axon-emcp — the official ℰMCP (Epistemic Model Context Protocol) server for AXON. A stdio JSON-RPC 2.0 MCP server that exposes the AXON language to AI coding agents (Claude Code, Codex, Cursor, …): every primitive's grammar + semantic constraints + idiomatic examples, plus live validation via the same `axon-frontend` lexer/parser/type-checker the `axon` CLI uses. Hydrated from a diff-reviewable markdown knowledge base under `src/knowledge/`."
keywords = ["axon", "mcp", "ai", "agent", "coding"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "axon-emcp"
path = "src/main.rs"

[dependencies]
# §ℰMCP — the compiler frontend gives us live validation: `axon.check`
# returns the same diagnostics `axon check` would print. We consume by
# path (in-tree development) + a version constraint (so cargo-publish
# resolves a registry version too, matching the §Fase 40 D1 discipline).
axon-frontend = { path = "../../axon-frontend", version = "=1.55.0" }

# Serde JSON for the MCP wire protocol (JSON-RPC 2.0 over stdio).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — MCP servers are I/O-bound + benefit from async stdin/
# stdout (the agent talks line-by-line); tokio is the de-facto Rust
# choice + matches the rest of the workspace. The `time` feature
# powers the §Fase 10 OTLP push loop (interval-driven background
# task; see `otlp.rs`).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }

# §Fase 10 — OTLP/gRPC exporter dependencies. We talk the OTLP wire
# directly using `tonic` (gRPC) + `opentelemetry-proto` (proto types
# + generated tonic client). No `opentelemetry-sdk` couplings — our
# snapshot model stays the single source of truth and the exporter
# is a pure translation: `Telemetry::snapshot()` → `ResourceMetrics`
# → `MetricsServiceClient::export`. The `tls-native-roots` feature
# lets the exporter talk to commercial OTLP endpoints (Honeycomb,
# Datadog, Grafana Cloud, ...) without bundling a webpki roots blob.
tonic = { version = "0.12", features = ["tls-native-roots"] }
opentelemetry-proto = { version = "0.27", default-features = false, features = ["gen-tonic", "metrics"] }
prost = "0.13"

# Markdown frontmatter parsing — the knowledge base under `src/knowledge/`
# uses YAML frontmatter to carry structured metadata (top-level status,
# category, grammar EBNF fragment, etc.). `gray_matter` is the canonical
# Rust crate for this pattern (used by ssg's like zola, mdbook plugins).
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }

# §Phase 1 — embed the knowledge corpus into the binary at compile time
# so `cargo install --path src/axon-emcp` ships a fully self-contained
# server (no need for adopters to set AXON_EMCP_KNOWLEDGE_DIR or copy
# a `share/` directory). At runtime we still prefer (a) the env-var
# override + (b) the in-tree dev path when they exist — both let
# operators hot-edit the corpus without rebuilding — and fall back to
# (c) this embedded copy in the installed-binary scenario.
include_dir = "0.7"

# Tracing — same observability stack as the rest of axon. We log to
# stderr only (stdout is reserved for the MCP wire protocol; corrupting
# it would break the agent's parser).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
# Smoke tests drive the server via a deterministic line-by-line JSON-RPC
# exchange; no external mock needed.
serde_json = "1"

# ─── target/ bloat control (disk hygiene, same as axon-rs) ───────────
# debug=1 (line-tables) for our code; strip debug info from third-party deps.
# Profiles apply only to the build ROOT → ignored by downstream consumers.
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0
